<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/chocolate_syrup_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/chocolate_syrup_text"
            android:buttonTint="@android:color/holo_blue_dark"/>

        <CheckBox
            android:id="@+id/sprinkles_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/sprinkles_text"
            android:buttonTint="@android:color/holo_blue_dark"/>

        <CheckBox
            android:id="@+id/crushed_nuts_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/crushed_nuts_text"
            android:buttonTint="@android:color/holo_blue_dark"/>

        <CheckBox
            android:id="@+id/cherries_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/cherries_text"
            android:buttonTint="@android:color/holo_blue_dark"/>


        <CheckBox
            android:id="@+id/orio_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/orio_cookie_crumbles_text"
            android:buttonTint="@android:color/holo_blue_dark"/>

        <Button
            android:id="@+id/show_toast_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="show_toast"
            android:text="@string/show_toast_label"
            android:buttonTint="@android:color/holo_blue_dark"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>